<resources>
    <string name="app_name">ConMed</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre">Nombre</string>
    <string name="consulta_med">CONSULTA MED</string>
    <string name="apellidos">Apellidos</string>
    <string name="siguiente">Siguiente</string>
    <string name="verificar">Verificar</string>
</resources>